<resources>
    <string name="app_name">HelloFreshTest</string>

    <string name="error_loading_recipes">Error loading recipes</string>
    <string name="error_invalid_email_address">Invalid Email Address</string>
    <string name="error_empty_password">Enter Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="action_settings">Settings</string>

    <string name="no_results">No Results</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
